2011-09-19 Enol Fernández <enolfc _AT_ ifca.unican.es> - 1.1.0
	* Fixed: #27, #41, #35, #38, #31
	* Improved documentation 

2011-06-13 Enol Fernández <enolfc _AT_ ifca.unican.es> - 1.0.5
	* Added man page

2011-05-13 Enol Fernández <enolfc _AT_ ifca.unican.es> - 1.0.5
	* Detection of hardware layout (linux and darwin currently)
	* Added preliminary support for processor affinity (openmpi currently).
	* Review of the mktemp mechanism

2011-03-04 Enol Fernández <enolfc _AT_ ifca.unican.es> - 1.0.4
	* New build procedure.

2011-02-23 Enol Fernández <enolfc _AT_ ifca.unican.es> - 1.0.4
	* Fixed bug #29. 
	* Added unit testing for mpi-start main source code. 

2011-02-23 Enol Fernández <enolfc _AT_ ifca.unican.es> - 1.0.3
	* Proper LAM support 
	* Default Installation into the standard filesystem hierarchy

2011-02-22 Enol Fernández <enolfc _AT_ ifca.unican.es> - 1.0.2
	* Added MPI tests
	* Fixed detection of MPI path.

2011-02-15 Enol Fernández <enolfc _AT_ ifca.unican.es> - 1.0.1
	* Added OpenMP tests
	* Review of hooks
	* Added BSD mktemp compatiblity.	

2011-02-09 Enol Fernández <enolfc _AT_ ifca.unican.es> - 1.0.0
	* Brand new versioning: 1.0.0
	* Ready for EMI-1 

2011-02-03 Enol Fernández <enolfc _AT_ ifca.unican.es> - 0.1.8
	* Added the chmod +x to executable.

2011-01-27 Enol Fernandez <enolfc _AT_ ifca.unican.es> - 0.1.7
	* Changed default installation prefix (now it is /opt/mpi-start)
	* Added and reviewed tests for basic functionality, schedulers and hooks. 

2011-01-12 Enol Fernandez <enolfc _AT_ ifca.unican.es> - 0.1.6
	* Changed changelog format (now it includes version)
	* Added -V option to get version
	* Changed the verbosity options.

2011-01-11 Enol Fernandez <enolfc _AT_ ifca.unican.es>
	* Added command line options
	* Added dummy scheduler in case none is found
	* Added condor scheduler

2010-11-29 Enol Fernandez <enolfc _AT_ ifca.unican.es>
	* Added per node option.

2010-10-05 Enol Fernandez <enolfc _AT_ ifca.unican.es>